--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions-ecosystem/action-release-label@v1
+      - uses: mgoodness/action-release-label@deep-fork
         id: release-label
         if: ${{ startsWith(github.event.label.name, 'release/') }}
 
