--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -9,7 +9,9 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+        with:
+          show-progress: false
 
       - uses: mgoodness/action-release-label@deep-fork
         id: release-label
