--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -8,7 +8,9 @@ jobs:
   update_labels:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+        with:
+          show-progress: false
 
       - uses: actions-ecosystem/action-size@v2
         id: size
