--- a/action.yml
+++ b/action.yml
@@ -1,20 +1,27 @@
-name: Actions Ecosystem Action Release Label
+name: Release Label Action
 description: Output semver update level from a label.
-author: Actions Ecosystem
+author: Michael Goodness
+branding:
+  icon: paperclip
+  color: blue
 inputs:
   label_prefix:
     description: A prefix for labels that indicate semver level ({major, minor, patch}).
     required: false
     default: "release/"
   labels:
-    description: The list of labels for the pull request. Separated with line breaks if there're multiple labels. Required for push events, not for pull_request events.
+    description: The list of labels for the pull request. Separated with line breaks if there are multiple labels. Required for push events; not for pull_request events.
     required: false
 outputs:
   level:
     description: A semver update level ({major, minor, patch}).
+    value: ${{ steps.get-release-label.outputs.level }}
 runs:
-  using: docker
-  image: Dockerfile
-branding:
-  icon: paperclip
-  color: blue
+  using: composite
+  steps:
+    - env:
+        LABEL_PREFIX: ${{ inputs.label_prefix }}
+        LABELS: ${{ inputs.labels }}
+      id: get-release-label
+      run: ${{ github.action_path }}/get-release-label.sh
+      shell: bash
