--- a/.github/workflows/check-release.yml
+++ b/.github/workflows/check-release.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           show-progress: false
 
-      - uses: mgoodness/action-release-label@deep-fork
+      - uses: mgoodness/action-release-label@v1.2.0
         id: release-label
         if: ${{ startsWith(github.event.label.name, 'release/') }}
 
