--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: mgoodness/action-release-label@deep-fork
+      - uses: mgoodness/action-release-label@v1.2.0
         id: release-label
         if: ${{ steps.get-merged-pull-request.outputs.title != null }}
         with:
